# pmdk-tests

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  FindBoost.cmake  LICENSE  README.md  functions.cmake  make-project.sh  style-format.cmake  windows_copy_pmdk_dlls.cmake
.github/workflows/: build.yml
etc/config/: README.md  config-dimm.xml.example  config.xml  config.xml.example
etc/jenkins/: README  pmdk_cpp_tests  pmdk_drd_tests  pmdk_helgrind_tests  pmdk_long_tests  pmdk_memcheck_tests  pmdk_pmemcheck_tests
etc/scripts/: check_format.py  check_license.py  check_utils.py  download_file.ps1  powershell_download_file.ps1  run_tests.py  test_build_rpm_packages.py
etc/scripts/split_manpages/: split_manpage.py  split_manpage_test.py
src/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tests/helpers/pool_extend/: CMakeLists.txt  main.cc
src/tests/pmemcto/: CMakeLists.txt
src/tests/pmemcto/basic/: cto_basic.cc  cto_basic.h  cto_basic_alloc_test.cc  cto_basic_test.cc
src/tests/pmemcto/stress/: cto_stress.cc  cto_stress.h  cto_stress_test.cc  number_generator.cc  number_generator.h
src/tests/pmemobj/: CMakeLists.txt  main.cc
src/tests/pmemobj/obj_ctl/alloc_class/: alloc_class.cc  alloc_class.h  alloc_class_test.cc  alloc_class_utils.cc  alloc_class_utils.h  ext_cfg.cc  ext_cfg.h  ext_cfg_test.cc
src/tests/pmemobj/obj_ctl/pool_extend/: pool_extend.cc  pool_extend.h  pool_extend_tests.cc
src/tests/pmemobj/res_pub/: reserve_publish.cc  reserve_publish.h  reserve_publish_test.cc
src/tests/pmemobj/utils/: structures.h
src/tests/pmempools/: CMakeLists.txt  main.cc
src/tests/pmempools/pmempool_create/: invalid_arguments.cc  invalid_arguments.h  invalid_arguments_tests.cc  pmempool_create.cc  pmempool_create.h  pmempool_create.tcc  pmempool_create_invalid_arguments.cc  pmempool_create_invalid_arguments.h  pmempool_create_invalid_arguments_tests.cc  pmempool_create_tests_CLI.cc  pmempool_create_valid_arguments.cc  pmempool_create_valid_arguments.h  pmempool_create_valid_arguments_tests.cc  valid_arguments.cc  valid_arguments.h  valid_arguments_tests.cc
src/tests/pmempools/pmempool_transform/: invalid_arguments.cc  invalid_arguments.h  invalid_arguments_tests.cc  pmempool_transform.cc  pmempool_transform.h  pmempool_transform_tests.cc  valid_arguments.cc  valid_arguments.h  valid_arguments_tests.cc
src/tests/pmempools/utils/: structures.h
src/tests/ras/: CMakeLists.txt  README.md  main.cc
src/tests/ras/ras_utils/configXML/: local_dimm_configuration.cc  local_dimm_configuration.h
src/tests/ras/ras_utils/dimm/: dimm.h
src/tests/ras/ras_utils/ssh_runner/: ssh_runner.cc  ssh_runner.h
src/tests/ras/unsafe_shutdown/: CMakeLists.txt  local_basic_tests.cc  local_basic_tests.h  local_main.cc  local_move_tests.cc  local_move_tests.h  local_replicas_tests.cc  local_replicas_tests.h  local_sds_feature_tests.cc  local_sds_feature_tests.h  local_test_phase.cc  local_test_phase.h  main.cc  remote_main.cc  remote_replicas_tests.cc  remote_replicas_tests.h  unsafe_shutdown.cc  unsafe_shutdown.h  us_basic_tests.cc  us_basic_tests.h  us_local_replicas_tests.cc  us_local_replicas_tests.h  us_move_tests.cc  us_move_tests.h
src/tests/ras/us_remote_agent/: CMakeLists.txt  main.cc
src/tests/ras/us_remote_tester/: CMakeLists.txt  main.cc  us_remote_tester.cc  us_remote_tester.h
src/tests/ras/us_test_controller/: CMakeLists.txt  main.cc  ras_configuration.cc  ras_configuration.h  us_test_controller.cc  us_test_controller.h
src/tests/ras/utils/: CMakeLists.txt  dimm.cc  dimm.h  dimm_management.cc  dimm_management.h  exit_codes.h
src/tests/ras/utils/configXML/: dimm_configuration.cc  dimm_configuration.h  local_dimm_configuration.cc  local_dimm_configuration.h  remote_dimm_configuration.cc  remote_dimm_configuration.h
src/tests/ras/utils/dimm/: dimm.cc  dimm.h  dimm_linux.cc  dimm_linux.h  dimm_windows.cc  dimm_windows.h
src/tests/ras/utils/inject_manager/: inject_manager.cc  inject_manager.h  inject_manager_windows.cc
src/tests/ras/utils/inject_mananger/: inject_manager.cc  inject_manager.h  inject_manager_linux.cc  inject_manager_windows.cc
src/tests/ras/utils/ras_configXML/: ras_configuration.cc  ras_configuration.h
src/tests/ras/utils/rebooters/powerswitch/: powerswitch.py  requirements.txt
src/tests/ras/utils/ssh_runner/: ssh_runner.cc  ssh_runner.h
src/tests/ras/utils/test_phase/: local_test_phase.cc  local_test_phase.h  remote_test_phase.cc  remote_test_phase.h  test_phase.h
src/tests/scripts/: headers.py  test_build_rpm_packages.py  test_compile_public_headers.py  test_rpm_packages_installation.py
src/tests/scripts/split_manpage/: exceptions.txt  split_manpage_tests.py
src/utils/: CMakeLists.txt  bins.h  constants.h  string_utils.h
src/utils/api_c/: api_c.cc  api_c.h  linux_api.cc  windows_api.cc
src/utils/configXML/: dimm_configuration.cc  dimm_configuration.h  local_configuration.cc  local_configuration.h  local_dimm_configuration.cc  local_dimm_configuration.h  read_config.cc  read_config.h  remote_configuration.cc  remote_configuration.h  remote_dimm_configuration.cc  remote_dimm_configuration.h
src/utils/non_copyable/: non_copyable.h
src/utils/output/: output.h
src/utils/pmdk_structures/: obj.cc  obj.h
src/utils/pool_data/: pool_data.cc  pool_data.h
src/utils/poolset/: part.h  poolset.cc  poolset.h  poolset_management.cc  poolset_management.h  replica.cc  replica.h
src/utils/shell/: i_shell.cc  i_shell.h  linux_shell.cc  windows_shell.cc
src/utils/test_utils/: file_utils.h
